k8s/nodejs/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nodejs
spec:
  host: nodejs-aaa.apps.lab.ocp.lan
  to:
    kind: Service
    name: nodejs
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
